# nova-transcribe

./: README.md  main.py  pyproject.toml
docs/: 00-initial-design.md  01-translation-implementation.md  02-basic-design.md
nova_transcribe/: __init__.py  bedrock.py  index.html  logging_setup.py  parsing.py  settings.py  ui.py  web.py
