[project]
name = "nova-transcribe"
version = "0.1.0"
description = "Amazon Nova 2 Sonic real-time English transcription web app"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "python-dotenv",
    "aws_sdk_bedrock_runtime",
]

[tool.hatch.build.targets.wheel]
packages = ["."]
